localstack/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
      - image: localstack/localstack:latest
        name: localstack
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 4
          httpGet:
            path: /
            port: 4566
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
        ports:
        - containerPort: 4566
        #4510-4559:4510-4559??
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 4
          httpGet:
            path: /
            port: 4566
          initialDelaySeconds: 5
          periodSeconds: 20
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 2000m
            memory: 1000Mi
          requests:
            cpu: 1000m
            memory: 800Mi
