localstack/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stremio
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: http
  selector:
    app: stremio
  sessionAffinity: None
  #type: LoadBalancer
  #loadBalancerIP: 192.168.64.5
  #type: ClusterIP
  type: ClusterIP
